--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.7)
 
 add_definitions(-std=c++11)
 
-set(sources BFS.cpp main.cpp )
+set(sources BFS.cpp DFS.cpp main.cpp )
 
 set(CMAKE_BUILD_TYPE Debug)
 
